--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,6 +23,16 @@
 
             <section id="downloads">
             </section>
+            <script type="text/x-mathjax-config">
+                MathJax.Hub.Config({
+                                "tex2jax": { inlineMath: [['$', '$'], ['\\(', '\\)']] },
+                                TeX: { equationNumbers: { autoNumber: "AMS" } },
+                                MMLorHTML: { prefer: { Firefox: "HTML" } }
+                    });
+            </script>
+            <script type="text/javascript"
+                src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+            </script>
         </header>
     </div>
 
